--- a/words/index.html
+++ b/words/index.html
@@ -34,10 +34,11 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="index.html"><img src="header.png" alt="" /></a></p>
-<p>William Hazard makes poems with computers.</p>
-<p><br><br>
-<a href="words/index.html">words</a> | <a href="sounds/index.html">sounds</a> | <a href="videos/index.html">videos</a> | <a href="code/index.html">code</a> | <a href="performances/index.html">performances</a> | <a href="log/index.html">log</a></p>
+<br/><p><a href="../index.html"><img src="words.jpg" alt="" /></a></p>
+<h1>words</h1>
+<p><a href="https://gifrenga.co">The Living Debt</a>: an <a href="(https://github.com/williamthazard/gifrenga)">open-source</a> GIF renga in collaboration with Robert David Carey</p>
+<p><a href="https://ghostproposal.com/">Ghost Proposal</a>: <a href="https://ghostproposal.com/William-Hazard">The Power of Then</a> – a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle</p>
+<p><a href="https://overpassbooks.org/">Overpass Books</a></p>
 <hr/>
 <p>updated 09/19/23 – williamthazard@protonmail.com</p>
 </div>
