--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="index.html"><img src="header.png" alt="" /></a></p>
-<p>William Hazard makes poems with computers.</p>
-<p><br><br>
+<br/><p><a href="index.html"><img src="header.png" alt="" /></a>
+<br><br>
+William Hazard makes poems with computers.
+<br><br>
 <a href="words/index.html">words</a> | <a href="sounds/index.html">sounds</a> | <a href="videos/index.html">videos</a> | <a href="code/index.html">code</a> | <a href="performances/index.html">performances</a> | <a href="log/index.html">log</a></p>
 <hr/>
 <p>updated 09/19/23 – williamthazard@protonmail.com</p>
