new design for index

--- a/index.html
+++ b/index.html
@@ -37,10 +37,20 @@
 <br/><p><a href="index.html"><img src="header.png" alt="" /></a>
 <br><br>
 William Hazard makes poems with computers.
+<br><br><br><br>
+These poems involve <a href="words/words.html">words</a>.
 <br><br>
-<a href="words/words.html">words</a> | <a href="sounds/sounds.html">sounds</a> | <a href="videos/videos.html">videos</a> | <a href="code/code.html">code</a> | <a href="performances/performances.html">performances</a> | <a href="log/log.html">log</a></p>
+They also involve <a href="sounds/sounds.html">sounds</a>.
+<br><br>
+These are interwoven with <a href="code/code.html">code</a>.
+<br><br>
+Sometimes, they're captured in <a href="videos/videos.html">videos</a>.
+<br><br>
+Sometimes, they're shared in <a href="performances/performances.html">performances</a>.
+<br><br>
+The rest of the time, there's a <a href="log/log.html">log</a>.</p>
 <hr/>
-<p>updated 09/19/23 – williamthazard@protonmail.com</p>
+<p>updated 09/22/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
