--- a/index.html
+++ b/index.html
@@ -34,21 +34,15 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="index.html"><img src="header.png" alt="" /></a>
-<br><br>
-William Hazard makes poems with computers.
+<br/><p><a href="index.html"><img src="header.png" alt="" /></a></p>
+<p>William Hazard makes poems with computers.
 <br><br><br><br>
-These poems involve <a href="words/words.html">words</a>.
-<br><br>
-They also involve <a href="sounds/sounds.html">sounds</a>.
-<br><br>
-These are interwoven with <a href="code/code.html">code</a>.
-<br><br>
-Sometimes, they're captured in <a href="videos/videos.html">videos</a>.
-<br><br>
-Sometimes, they're shared in <a href="performances/performances.html">performances</a>.
-<br><br>
-The rest of the time, there's a <a href="log/log.html">log</a>.</p>
+These poems involve <a href="words/words.html">words</a>.</p>
+<p>They also involve <a href="sounds/sounds.html">sounds</a>.</p>
+<p>These are interwoven with <a href="code/code.html">code</a>.</p>
+<p>Sometimes, they're captured in <a href="videos/videos.html">videos</a>.</p>
+<p>Sometimes, they're shared in <a href="performances/performances.html">performances</a>.</p>
+<p>The rest of the time, there's a <a href="log/log.html">log</a>.</p>
 <hr/>
 <p>updated 09/22/23 – williamthazard@protonmail.com</p>
 </div>
