--- a/code/code.html
+++ b/code/code.html
@@ -36,6 +36,7 @@
 <br/>
 <br/><p><a href="../index.html"><img src="code.jpg" alt="" /></a></p>
 <h1>code</h1>
+<p><a href="https://github.com/williamthazard/poemShuffler">poemShuffler</a>: tools for shuffling lines of poetry around</p>
 <p><a href="https://github.com/williamthazard/buttonsandknobs">Buttons &amp; Knobs</a>: a collection of boilerplate GUI elements for <a href="https://supercollider.github.io/">SuperCollider</a></p>
 <p><a href="https://github.com/williamthazard/gifrenga">gifrenga</a>: a renga made of GIFs</p>
 <p><a href="https://github.com/williamthazard/CarterCrow">CarterCrow</a>: <a href="https://github.com/williamthazard/superCrow">superCrow</a> + <a href="https://github.com/williamthazard/carters_delay">Carter's Delay</a> – <a href="https://youtu.be/kug6KvzDDHM?si=MBmOlZmsCm0iQbWw">(demo)</a></p>
@@ -52,7 +53,7 @@
 <p><a href="https://github.com/williamthazard/jf-strum-sequencer">strum sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a>, based on <a href="https://nnnnnnnn.co/">Tehn's</a> code from <a href="https://www.youtube.com/watch?v=TkH8jxItXbw&amp;list=PLDeicGW8SQOwVdHDQkhUoDkCS67VDRVAd&amp;index=17&amp;t=1214s">Flash Crash 210710</a> – <a href="https://youtu.be/hIXeSZBBOPQ?si=cbG1I6O1LnrGSU7u">(demo)</a></p>
 <p><a href="https://github.com/williamthazard/alphabetsequencer">alphabet sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a> – <a href="https://soundcloud.com/user-246275786/all-our-affairs">(demo)</a></p>
 <hr/>
-<p>updated 09/19/23 – williamthazard@protonmail.com</p>
+<p>updated 09/24/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
