--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ These poems involve <a href="words/words.html">words</a>.</p>
 <p>These are interwoven with <a href="code/code.html">code</a>.</p>
 <p>Sometimes, they're captured in <a href="videos/videos.html">videos</a>.</p>
 <p>Sometimes, they're shared in <a href="performances/performances.html">performances</a>.</p>
-<p>The rest of the time, there's a <a href="log/log.html">log</a>.</p>
+<p>The rest of the time, there's a <a href="log/log.html">log</a> [<a href="log/rss.xml">rss</a>].</p>
 <hr/>
-<p>updated 09/22/23 – williamthazard@protonmail.com</p>
+<p>updated 09/24/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
