add link to site repo to code page

--- a/code/code.html
+++ b/code/code.html
@@ -36,6 +36,7 @@
 <br/>
 <br/><p><a href="../index.html"><img src="code.jpg" alt="" /></a></p>
 <h1>code</h1>
+<p><a href="https://github.com/williamthazard/williamhazard.co">this website</a></p>
 <p><a href="https://github.com/williamthazard/poemShuffler">poemShuffler</a>: tools for shuffling lines of poetry around</p>
 <p><a href="https://github.com/williamthazard/buttonsandknobs">Buttons &amp; Knobs</a>: a collection of boilerplate GUI elements for <a href="https://supercollider.github.io/">SuperCollider</a></p>
 <p><a href="https://github.com/williamthazard/gifrenga">gifrenga</a>: a renga made of GIFs</p>
