--- a/videos/videos.html
+++ b/videos/videos.html
@@ -36,9 +36,9 @@
 <br/>
 <br/><p><a href="../index.html"><img src="videos.jpg" alt="" /></a></p>
 <h1>videos</h1>
-<p><a href="https://www.youtube.com/watch?v=MMg-zyYMmNk&amp;t=99s">Flash Crash 220806</a>: a livestreamed performance of &quot;The Power of Then,&quot; a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle (later published, in a slightly different form, in <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>)</p>
 <p><a href="https://youtu.be/Ny-4Mpasj4A?si=dxj0RYzoo-V1PxAK">A Twenty-Minute Drone For Your Enjoyment</a></p>
 <p><a href="https://youtu.be/hIXeSZBBOPQ?si=cbG1I6O1LnrGSU7u">already over</a>: this piece is a tribute to the now-defunct <a href="https://flashcrash.net/">Flash Crash</a> livestreamed performance series, is based loosely on <a href="https://nnnnnnnn.co/">Tehn's</a> performance in <a href="https://www.youtube.com/watch?v=TkH8jxItXbw&amp;list=PLDeicGW8SQOwVdHDQkhUoDkCS67VDRVAd&amp;index=17&amp;t=1214s">Flash Crash 210710</a>, and was later included in <a href="https://garrettheatre.com/garret">The Garrett Theatre's</a> production of <a href="https://garrettheatre.com/maids">The Maids</a></p>
+<p><a href="https://www.youtube.com/watch?v=MMg-zyYMmNk&amp;t=99s">Flash Crash 220806</a>: a livestreamed performance of &quot;The Power of Then,&quot; a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle (later published, in a slightly different form, in <a href="https://ghostproposal.com/"><em>Ghost Proposal</em></a>)</p>
 <p><a href="https://youtu.be/u7vDNAGMIUw?si=74mnnTGhE_wEkcDm">Poem About Nature</a>: an early <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> experiment and a test of a solar-powered eurorack modular synth setup (which was very much inspired by <a href="https://www.youtube.com/watch?v=tqNeWYIg-78">this</a> Cool Maritime video)</p>
 <p><a href="https://youtu.be/pLqNLp-24PA?si=vxyn_TRAa4ZX2SYM">This Is Just To Say</a>: early <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> experiment with WCW</p>
 <p><a href="https://youtu.be/Iqig0TRCraw?si=_vRdEcILZNkPmXQ-">Coffee Druid Afternoon</a>: a laptop, a modular synth, a notebook, a cup of coffee, and some nice light</p>
@@ -48,8 +48,9 @@
 <p><a href="https://youtu.be/zHRq18T92RU?si=Qt0ifSClCiJWycKU">Arcologies of Knowledge: Bernadette Mayer</a>: exploration of the <a href="https://writing.upenn.edu/pennsound/">PennSound</a> archive's recordings of <a href="https://writing.upenn.edu/pennsound/x/Mayer.php">Bernadette Mayer</a> by way of the <a href="https://github.com/northern-information/arcologies">arcologies</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/norns/">norns</a>, by <a href="https://nor.the-rn.info/">Northern Information</a></p>
 <p><a href="https://youtu.be/jlLMY8Xa_dk?si=98w2GIM8zptwiGR2">Fall</a>: demonstration with the <a href="https://norns.community/fall">fall</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/norns/">norns</a>, by <a href="https://norns.community/author#ambalek">ambalek</a></p>
 <p><a href="https://youtu.be/vuEUNN_ldO4?si=iv9JC7RV_cozjNMl">First Crow First</a>: demonstration of the &quot;first&quot; script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a>, using a minimal eurorack modular setup</p>
+<p><a href="https://vimeo.com/506638600">The Pageant</a>: guy meets girl. Directed by Kasey O'Brien. Starring Billy Berger-Bailey and Hannah Adrian. Best LGBTQ, Toronto Intl Women Film Festival. Best LGBTQ, Montreal Independent Film Festival. Best Performance in a Drama, Reel Love Festival. Best Duo Silver Award at Best Actor Awards NY</p>
 <hr/>
-<p>updated 09/19/23 – williamthazard@protonmail.com</p>
+<p>updated 09/25/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
