add Gahlord's last name

--- a/performances/performances.html
+++ b/performances/performances.html
@@ -36,7 +36,7 @@
 <br/>
 <br/><p><a href="../index.html"><img src="performances.jpg" alt="" /></a></p>
 <h1>performances</h1>
-<p><strong>Oct 28 2023</strong> – <a href="https://www.twitch.tv/lines_community">blue moon triptych</a>: poetry in the expanded field (w/ <a href="https://gahlorddewald.com">gahlord</a> &amp; <a href="https://colmkil.bandcamp.com">colmkil</a>)</p>
+<p><strong>Oct 28 2023</strong> – <a href="https://www.twitch.tv/lines_community">blue moon triptych</a>: poetry in the expanded field (w/ <a href="https://gahlorddewald.com">Gahlord Dewald</a> &amp; <a href="https://colmkil.bandcamp.com">colmkil</a>)</p>
 <p><strong>Oct 21 2023</strong> – Theatre of the Flat Imagination, vol. 1: My Walk With Bob (w/ Robert David Carey), Philadelphia PA</p>
 <p><strong>Jul 30 2023</strong> - <a href="https://allevents.in/bloomeville/co-creation-episode-ii/10000658634472437?ref=past-event-page">Co-Creation</a> @ Turquoise Barn, Bloomville NY</p>
 <p><strong>Jun 30 2023</strong> – <a href="https://icad2023.icad.org/">International Conference on Auditory Display</a>, Norrköping SWE</p>
