--- a/videos/videos.html
+++ b/videos/videos.html
@@ -47,10 +47,10 @@
 <p><a href="https://youtu.be/FI2juaXGxtU?si=SkaJZpjTyX_ejC-R">Arcologies of Knowledge: Kathy Acker</a>: exploration of the <a href="https://writing.upenn.edu/pennsound/">PennSound</a> archive's recordings of <a href="https://writing.upenn.edu/pennsound/x/Acker.php">Kathy Acker</a> by way of the <a href="https://github.com/northern-information/arcologies">arcologies</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/norns/">norns</a>, by <a href="https://nor.the-rn.info/">Northern Information</a></p>
 <p><a href="https://youtu.be/zHRq18T92RU?si=Qt0ifSClCiJWycKU">Arcologies of Knowledge: Bernadette Mayer</a>: exploration of the <a href="https://writing.upenn.edu/pennsound/">PennSound</a> archive's recordings of <a href="https://writing.upenn.edu/pennsound/x/Mayer.php">Bernadette Mayer</a> by way of the <a href="https://github.com/northern-information/arcologies">arcologies</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/norns/">norns</a>, by <a href="https://nor.the-rn.info/">Northern Information</a></p>
 <p><a href="https://youtu.be/jlLMY8Xa_dk?si=98w2GIM8zptwiGR2">Fall</a>: demonstration with the <a href="https://norns.community/fall">fall</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/norns/">norns</a>, by <a href="https://norns.community/author#ambalek">ambalek</a></p>
-<p><a href="https://youtu.be/vuEUNN_ldO4?si=iv9JC7RV_cozjNMl">First Crow First</a>: demonstration of the &quot;first&quot; script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a>, using a minimal eurorack modular setup</p>
+<p><a href="https://youtu.be/vuEUNN_ldO4?si=iv9JC7RV_cozjNMl">First Crow First</a>: demonstration of the <a href="https://monome.org/docs/crow/first/">first</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a>, using a minimal eurorack modular setup</p>
 <p><a href="https://vimeo.com/506638600">The Pageant</a>: guy meets girl. Directed by Kasey O'Brien. Starring Billy Berger-Bailey and Hannah Adrian. Best LGBTQ, Toronto Intl Women Film Festival. Best LGBTQ, Montreal Independent Film Festival. Best Performance in a Drama, Reel Love Festival. Best Duo Silver Award at Best Actor Awards NY</p>
 <hr/>
-<p>updated 09/25/23 – williamthazard@protonmail.com</p>
+<p>updated 11/10/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
