add automatic image size conversion to build.sh

--- a/code/code.html
+++ b/code/code.html
@@ -34,7 +34,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="../index.html"><img src="code.jpg" alt="" /></a></p>
+<br/><p><a href="../index.html"><img src="code.jpeg" alt="" /></a></p>
 <h1>code</h1>
 <p><a href="https://github.com/williamthazard/serenityCrow">serenityCrow</a>: <a href="https://github.com/williamthazard/serenitynow">serenity now</a> but for <a href="https://monome.org/docs/crow/">crow</a></p>
 <p><a href="https://github.com/williamthazard/superLied">superLied</a>: lied script for <a href="https://supercollider.github.io/">SuperCollider</a>. Turns text into music – <a href="https://www.youtube.com/watch?v=kIbWiqHrXFw">(demo)</a></p>
@@ -56,7 +56,7 @@
 <p><a href="https://github.com/williamthazard/jf-strum-sequencer">strum sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a>, based on <a href="https://nnnnnnnn.co/">Tehn's</a> code from <a href="https://www.youtube.com/watch?v=TkH8jxItXbw&amp;list=PLDeicGW8SQOwVdHDQkhUoDkCS67VDRVAd&amp;index=17&amp;t=1214s">Flash Crash 210710</a> – <a href="https://youtu.be/hIXeSZBBOPQ?si=cbG1I6O1LnrGSU7u">(demo)</a></p>
 <p><a href="https://github.com/williamthazard/alphabetsequencer">alphabet sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a> – <a href="https://soundcloud.com/user-246275786/all-our-affairs">(demo)</a></p>
 <hr/>
-<p>updated 11/10/23 – williamthazard@protonmail.com</p>
+<p>updated 11/22/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
