--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="index.html"><img src="header.png" alt="" /></a></p>
+<br/><p><a href="index.html"><img src="header.jpeg" alt="" /></a></p>
 <p>William Hazard makes poems with computers.
 <br><br><br><br>
 These poems involve <a href="words/words.html">words</a>.</p>
