--- a/words/words.html
+++ b/words/words.html
@@ -34,13 +34,13 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="../index.html"><img src="words.jpg" alt="" /></a></p>
+<br/><p><a href="../index.html"><img src="words.jpeg" alt="" /></a></p>
 <h1>words</h1>
 <p><a href="https://gifrenga.co">The Living Debt</a>: an <a href="https://github.com/williamthazard/gifrenga">open-source</a> GIF renga in collaboration with Robert David Carey</p>
 <p><a href="https://ghostproposal.com/">Ghost Proposal</a>: <a href="https://ghostproposal.com/William-Hazard">The Power of Then</a> – a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle</p>
 <p><a href="https://overpassbooks.org/">Overpass Books</a></p>
 <hr/>
-<p>updated 09/20/23 – williamthazard@protonmail.com</p>
+<p>updated 11/22/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
