--- a/videos/videos.html
+++ b/videos/videos.html
@@ -36,6 +36,8 @@
 <br/>
 <br/><p><a href="../index.html"><img src="videos.jpeg" alt="" /></a></p>
 <h1>videos</h1>
+<p><a href="https://youtu.be/prJhTocp-qc?si=dJdhCblkr6UUjIHo">superLied on two round robins</a></p>
+<p><a href="https://www.youtube.com/watch?v=KO3W19AKmEA&amp;t=6s">interview with two round robins</a></p>
 <p><a href="https://youtu.be/d_ACmJyHZzI?si=bpCxqSLBTF58uuqi">blue moon triptych – poetry in the expanded field</a>: this is a recording of a livestreamed performance of &quot;woods&quot; which originally aired on October 28, 2023. This piece is dedicated to <a href="https://www.monicaberlin.com/">Monica Berlin</a>, with thanks to <a href="https://www.bethmarzoni.com/">Beth Marzoni</a>.</p>
 <p><a href="https://youtu.be/Ny-4Mpasj4A?si=dxj0RYzoo-V1PxAK">A Twenty-Minute Drone For Your Enjoyment</a></p>
 <p><a href="https://youtu.be/hIXeSZBBOPQ?si=cbG1I6O1LnrGSU7u">already over</a>: this piece is a tribute to the now-defunct <a href="https://flashcrash.net/">Flash Crash</a> livestreamed performance series, is based loosely on <a href="https://nnnnnnnn.co/">Tehn's</a> performance in <a href="https://www.youtube.com/watch?v=TkH8jxItXbw&amp;list=PLDeicGW8SQOwVdHDQkhUoDkCS67VDRVAd&amp;index=17&amp;t=1214s">Flash Crash 210710</a>, and was later included in <a href="https://garrettheatre.com/garret">The Garrett Theatre's</a> production of <a href="https://garrettheatre.com/maids">The Maids</a></p>
@@ -51,7 +53,7 @@
 <p><a href="https://youtu.be/vuEUNN_ldO4?si=iv9JC7RV_cozjNMl">First Crow First</a>: demonstration of the <a href="https://monome.org/docs/crow/first/">first</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a>, using a minimal eurorack modular setup</p>
 <p><a href="https://vimeo.com/506638600">The Pageant</a>: guy meets girl. Directed by Kasey O'Brien. Starring Billy Berger-Bailey and Hannah Adrian. Best LGBTQ, Toronto Intl Women Film Festival. Best LGBTQ, Montreal Independent Film Festival. Best Performance in a Drama, Reel Love Festival. Best Duo Silver Award at Best Actor Awards NY</p>
 <hr/>
-<p>updated 11/22/23 – williamthazard@protonmail.com</p>
+<p>updated 11/25/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
