remove nested parentheses from performances page

--- a/performances/performances.html
+++ b/performances/performances.html
@@ -38,7 +38,7 @@
 <h1>performances</h1>
 <p><strong>Jan 20 2024</strong> – Theatre of the Flat Imagination, vol. 4: Feed (w/ <a href="https://alongmirewriter.squarespace.com/">Warren Longmire</a>), Philadelphia PA</p>
 <p><strong>Dec 16 2023</strong> – Theatre of the Flat Imagination, vol. 3: Awaiting (w/ Whit MacLaughlin), Philadelphia PA</p>
-<p><strong>Nov 18 2023</strong> – Theatre of the Flat Imagination, vol. 2: Jack the Modernist (w/ parens chat (<a href="https://dndrks.com/">Dan Derks</a> &amp; <a href="https://ryleealanza.org/pages/alanza/">Alanza</a>)), Philadelphia PA (<a href="https://youtu.be/nDCAaxCHuxo?si=eluSKnsg_RpdZjcH">video</a>)</p>
+<p><strong>Nov 18 2023</strong> – Theatre of the Flat Imagination, vol. 2: Jack the Modernist (w/ parens chat), Philadelphia PA (<a href="https://youtu.be/nDCAaxCHuxo?si=eluSKnsg_RpdZjcH">video</a>)</p>
 <p><strong>Oct 28 2023</strong> – <a href="https://www.twitch.tv/lines_community">blue moon triptych</a>: poetry in the expanded field (w/ <a href="https://gahlorddewald.com">Gahlord Dewald</a> &amp; <a href="https://colmkil.bandcamp.com">colmkil</a>) (<a href="https://www.youtube.com/watch?v=d_ACmJyHZzI&amp;t=612s">video</a>)</p>
 <p><strong>Oct 21 2023</strong> – Theatre of the Flat Imagination, vol. 1: My Walk With Bob (w/ Robert David Carey), Philadelphia PA</p>
 <p><strong>Jul 30 2023</strong> - <a href="https://allevents.in/bloomeville/co-creation-episode-ii/10000658634472437?ref=past-event-page">Co-Creation</a> @ Turquoise Barn, Bloomville NY</p>
