change Iffy registration link for universal design

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ These poems involve <a href="words/words.html">words</a>.</p>
 <p>Sometimes, they're shared in <a href="performances/performances.html">performances</a>.</p>
 <p>The rest of the time, there's a <a href="log/log.html">log</a> [<a href="log/rss.xml">rss</a>].
 <br><br><br><br>
-<strong>Click <a href="https://iffybooks.net/event/supercollider-jan-21/">here</a> to register for my upcoming (free!) <a href="https://supercollider.github.io/">SuperCollider</a> workshop at <a href="https://iffybooks.net/">Iffy Books</a> on 1/21/24</strong></p>
+<strong><a href="https://iffybooks.net/event/supercollider-jan-21/">Registration</a> is now open for my upcoming (free!) <a href="https://supercollider.github.io/">SuperCollider</a> workshop at <a href="https://iffybooks.net/">Iffy Books</a> on 1/21/24</strong></p>
 <hr/>
-<p>updated 12/27/23 – williamthazard@protonmail.com</p>
+<p>updated 12/28/23 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
