add superLied workshop registration link, TOTFIv5

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ These poems involve <a href="words/words.html">words</a>.</p>
 <p>Sometimes, they're shared in <a href="performances/performances.html">performances</a>.</p>
 <p>The rest of the time, there's a <a href="log/log.html">log</a> [<a href="log/rss.xml">rss</a>].
 <br><br><br><br>
-<strong><a href="https://iffybooks.net/event/supercollider-jan-21/">Registration</a> is now open for my upcoming (free!) <a href="https://supercollider.github.io/">SuperCollider</a> workshop at <a href="https://iffybooks.net/">Iffy Books</a> on 1/21/24</strong></p>
+<strong><a href="https://us06web.zoom.us/meeting/register/tZ0kceyhqDgtGNNnTN_Ywl3wjxoYmK8jCJ8A#/registration">Registration</a> is now open for my upcoming (free!) <a href="https://github.com/williamthazard/superLied">SuperLied</a> poetry workshop, presented on zoom on 2/11/24 as part of <a href="https://www.beaboutitpress.com/">Be About It Press</a> and <a href="https://www.thirtywestph.com/">Thirty West Publishing House</a>'s <em>A Writer's Party</em></strong></p>
 <hr/>
-<p>updated 12/28/23 – williamthazard@protonmail.com</p>
+<p>updated 01/22/24 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
