--- a/code/code.html
+++ b/code/code.html
@@ -36,6 +36,9 @@
 <br/>
 <br/><p><a href="../index.html"><img src="code.jpeg" alt="" /></a></p>
 <h1>code</h1>
+<p><a href="https://github.com/williamthazard/aan">A/An</a>: an instrument built for <a href="https://mandygutmanngonzalez.com/">Mandy Gutmann-Gonzalez</a>, for performances of work from their chapbook <em><a href="https://endlinepress.com/A-An-by-Mandy-Gutmann-Gonzalez-a-chapbook">A/An</a></em></p>
+<p><a href="https://github.com/williamthazard/seamstressCarter">seamstressCarter</a>: <a href="https://github.com/williamthazard/carters_delay">Carter's Delay</a> for <a href="https://github.com/ryleelyman/seamstress">seamstress</a></p>
+<p><a href="https://github.com/williamthazard/bwsampler">bwsampler</a>: a sampler built in collaboration with students at The Bridge Way School in Philadelphia, PA</p>
 <p><a href="https://github.com/williamthazard/iffy">iffy books workshop script</a>: code repository for <a href="https://supercollider.github.io/">SuperCollider</a> workshop at <a href="https://iffybooks.net/">Iffy Books</a> in Philadelphia, PA 240121</p>
 <p><a href="https://github.com/williamthazard/fileScope">fileScope</a>: <a href="https://supercollider.github.io/">SuperCollider</a> audio file visualizer</p>
 <p><a href="https://github.com/williamthazard/serenityCrow">serenityCrow</a>: <a href="https://github.com/williamthazard/serenitynow">serenity now</a> but for <a href="https://monome.org/docs/crow/">crow</a></p>
@@ -58,7 +61,7 @@
 <p><a href="https://github.com/williamthazard/jf-strum-sequencer">strum sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a>, based on <a href="https://nnnnnnnn.co/">Tehn's</a> code from <a href="https://www.youtube.com/watch?v=TkH8jxItXbw&amp;list=PLDeicGW8SQOwVdHDQkhUoDkCS67VDRVAd&amp;index=17&amp;t=1214s">Flash Crash 210710</a> – <a href="https://youtu.be/hIXeSZBBOPQ?si=cbG1I6O1LnrGSU7u">(demo)</a></p>
 <p><a href="https://github.com/williamthazard/alphabetsequencer">alphabet sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a> – <a href="https://soundcloud.com/user-246275786/all-our-affairs">(demo)</a></p>
 <hr/>
-<p>updated 01/23/24 – williamthazard@protonmail.com</p>
+<p>updated 05/14/24 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
