--- a/sketches/liquid-text/index.html
+++ b/sketches/liquid-text/index.html
@@ -10,15 +10,13 @@
   src: local(''),
     url('../include/roboto-mono-v21-latin-regular.woff2') format('woff2'),
     url('../include/roboto-mono-v21-latin-regular.woff') format('woff'); }
-body {background-color:#222; max-width:800px; color:#fff; 
-  font-family: 'Roboto Mono', monospace; font-size: 0.8em;
-  margin:0px auto; padding: 0 0px;}
+body {background-color:#222; color:#fff; 
+  font-family: 'Roboto Mono', monospace; font-size: 0.8em;}
 pre {font-size: 1.3em; color:#fff;}
 h1 {font-weight:bold; font-size: 1.6em; margin-top:1.5em;}
 hr {margin-top: 4em; border: none; background-color: #555; color: #555; height: 1px;}
 a {color:#aaa;}
 a:hover {color:#ccc;}
-img {margin-top: -0.5em; max-width:100%;}
 input {font-family: inherit;}
 code {
   background: #222;
