--- a/sketches/liquid-text/index.html
+++ b/sketches/liquid-text/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/addons/p5.sound.min.js"></script>
+    <script src="lines.js"></script>
     <meta charset="utf-8" />
 <style>
   @font-face {
