--- a/sketches/liquid-text/index.html
+++ b/sketches/liquid-text/index.html
@@ -9,8 +9,7 @@
   @font-face {
   font-family: 'Roboto Mono'; font-style: normal; font-weight: 400;
   src: local(''),
-    url('../include/roboto-mono-v21-latin-regular.woff2') format('woff2'),
-    url('../include/roboto-mono-v21-latin-regular.woff') format('woff'); }
+    url('../../RobotoMono-VariableFont_wght.ttf') format('ttf'); }
 body {background-color:#222; color:#fff; 
   font-family: 'Roboto Mono', monospace; font-size: 0.8em;}
 pre {font-size: 1.3em; color:#fff;}
