--- a/sketches/test/index.html
+++ b/sketches/test/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/addons/p5.sound.min.js"></script>
+  <script src="libraries/p5.js">
+  </script>
+  <script src="libraries/p5.sound.min.js">
+  </script>
     <meta charset="utf-8" />
 <style>
   @font-face {
