--- a/sketches/index.html
+++ b/sketches/index.html
@@ -58,13 +58,20 @@
       padding: .1rem .3rem .2rem;
       border-radius: .2rem; 
     }
+    p.center {text-align: center}
+    p.right {text-align: right}
   </style>
 </head>
 <body>
     <div style="margin:20px">
 <br/>
-<br/><hr/>
-<p>updated 05/28/24 – williamthazard@protonmail.com</p>
+<br/><p><a href="index.html"><img src="sketches.jpeg" alt="" /></a></p>
+<h1><p class='center'>sketches</p></h1>
+<p><a href="240604/index.html">240604</a></p>
+<p><a href="liquid-text/index.html">liquid text</a></p>
+<p><a href="test/index.html">test</a></p>
+<hr/>
+<p>updated 06/14/24 – williamthazard@protonmail.com</p>
 </div>
 </body>
 </html><!doctype html>
