--- a/sketches/index.html
+++ b/sketches/index.html
@@ -65,7 +65,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="index.html"><img src="sketches.jpeg" alt="" /></a></p>
+<br/><p><a href="../index.html"><img src="sketches.jpeg" alt="" /></a></p>
 <h1><p class='center'>sketches</p></h1>
 <p><a href="240604/index.html">240604</a></p>
 <p><a href="liquid-text/index.html">liquid text</a></p>
