--- a/sketches/index.html
+++ b/sketches/index.html
@@ -71,7 +71,7 @@
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p>updated 06/14/24 – williamthazard@protonmail.com</p>
+<p>updated 06/14/24 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
