--- a/sounds/sounds.html
+++ b/sounds/sounds.html
@@ -76,7 +76,7 @@
 <p><a href="https://soundcloud.com/william-hazard-331424393">Theatre of the Flat Imagination</a>: occasional recordings from the <a href="https://llllllll.co/t/william-hazards-theatre-of-the-flat-imagination/65108?u=williamhazard">performance series</a></p>
 <p><a href="https://soundcloud.com/user-246275786">SoundCloud</a>: sketches, demos, &amp; studies</p>
 <hr/>
-<p>updated 05/18/24 – williamthazard@protonmail.com</p>
+<p>updated 05/18/24 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
