--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       max-width: 800px; 
       color: #fff; 
       font-family: 'Roboto Mono', monospace; 
-      font-size: 0.7em;
+      font-size: 0.8em;
       margin: 40px auto; 
       padding: 0 10px;
     }
@@ -79,7 +79,7 @@ These poems involve <a href="words/words.html">words</a>.</p>
 <p>Sometimes, they're shared in <a href="performances/performances.html">performances</a>.</p>
 <p>The rest of the time, there's a <a href="log/log.html">log</a> [<a href="log/rss.xml">rss</a>].</p>
 <hr/>
-<p>updated 02/15/24 – williamthazard "at" pm.me</p>
+<p>updated 240215 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
