--- a/sketches/index.html
+++ b/sketches/index.html
@@ -18,7 +18,7 @@
       max-width: 800px; 
       color: #fff; 
       font-family: 'Roboto Mono', monospace; 
-      font-size: 0.7em;
+      font-size: 0.8em;
       margin: 40px auto; 
       padding: 0 10px;
     }
@@ -75,7 +75,7 @@
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p>updated 06/14/24 – williamthazard "at" pm.me</p>
+<p>updated 240614 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
