--- a/words/words.html
+++ b/words/words.html
@@ -18,7 +18,7 @@
       max-width: 800px; 
       color: #fff; 
       font-family: 'Roboto Mono', monospace; 
-      font-size: 0.7em;
+      font-size: 0.8em;
       margin: 40px auto; 
       padding: 0 10px;
     }
@@ -77,7 +77,7 @@
 <p><a href="https://ghostproposal.com/">Ghost Proposal</a>: <a href="https://ghostproposal.com/William-Hazard">The Power of Then</a> – a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle</p>
 <p><a href="https://overpassbooks.org/">Overpass Books</a></p>
 <hr/>
-<p>updated 06/13/24 – williamthazard "at" pm.me</p>
+<p>updated 240613 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
