--- a/code/code.html
+++ b/code/code.html
@@ -96,7 +96,7 @@
 <p><a href="https://github.com/williamthazard/jf-strum-sequencer">strum sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a>, based on <a href="https://nnnnnnnn.co/">Tehn's</a> code from <a href="https://www.youtube.com/watch?v=TkH8jxItXbw&amp;list=PLDeicGW8SQOwVdHDQkhUoDkCS67VDRVAd&amp;index=17&amp;t=1214s">Flash Crash 210710</a> – <a href="https://youtu.be/hIXeSZBBOPQ?si=cbG1I6O1LnrGSU7u">(demo)</a></p>
 <p><a href="https://github.com/williamthazard/alphabetsequencer">alphabet sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a> – <a href="https://soundcloud.com/user-246275786/all-our-affairs">(demo)</a></p>
 <hr/>
-<p>updated 240514 – williamthazard "at" pm.me</p>
+<p>240514 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
