--- a/sketches/index.html
+++ b/sketches/index.html
@@ -75,7 +75,7 @@
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p>updated 240614 – williamthazard "at" pm.me</p>
+<p>240614 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
