--- a/videos/videos.html
+++ b/videos/videos.html
@@ -89,7 +89,7 @@
 <p><a href="https://youtu.be/vuEUNN_ldO4?si=iv9JC7RV_cozjNMl">First Crow First</a>: demonstration of the <a href="https://monome.org/docs/crow/first/">first</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a>, using a minimal eurorack modular setup</p>
 <p><a href="https://vimeo.com/506638600">The Pageant</a>: guy meets girl. Directed by Kasey O'Brien. Starring Billy Berger-Bailey and Hannah Adrian. Best LGBTQ, Toronto Intl Women Film Festival. Best LGBTQ, Montreal Independent Film Festival. Best Performance in a Drama, Reel Love Festival. Best Duo Silver Award at Best Actor Awards NY</p>
 <hr/>
-<p>updated 240228 – williamthazard "at" pm.me</p>
+<p>240228 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
