--- a/words/words.html
+++ b/words/words.html
@@ -77,7 +77,7 @@
 <p><a href="https://ghostproposal.com/">Ghost Proposal</a>: <a href="https://ghostproposal.com/William-Hazard">The Power of Then</a> – a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle</p>
 <p><a href="https://overpassbooks.org/">Overpass Books</a></p>
 <hr/>
-<p>240613 – williamthazard "at" pm.me</p>
+<p>updated 240613 – williamthazard "at" pm.me</p>
 </div>
 </body>
 </html><!doctype html>
