--- a/sketches/liquid-text/index.html
+++ b/sketches/liquid-text/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="../libraries/p5.js">
-  </script>
-  <script src="../libraries/p5.sound.min.js">
-  </script>
+  <script src="../libraries/p5.js"></script>
+  <script src="../libraries/p5.sound.min.js"></script>
   <script src="lines.js"></script>
   <meta charset="utf-8" />
 <style>
