--- a/sketches/index.html
+++ b/sketches/index.html
@@ -76,7 +76,7 @@
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p>updated 240705 – williamthazard "at" pm.me</p>
+<p>updated 240705 – williamthazard at pm.me</p>
 </div>
 </body>
 </html><!doctype html>
