--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     }
     p.center {
       text-align: center;
-      }
+    }
     p.right {
       text-align: right;
-      }
+    }
   </style>
 </head>
 <body>
@@ -77,9 +77,9 @@ These poems involve <a href="words/words.html">words</a>.</p>
 <p>These are interwoven with <a href="code/code.html">code</a>.</p>
 <p>Sometimes, they're captured in <a href="videos/videos.html">videos</a>.</p>
 <p>Sometimes, they're shared in <a href="performances/performances.html">performances</a>.</p>
-<p>The rest of the time, there's a <a href="log/log.html">log</a> [<a href="log/rss.xml">rss</a>].</p>
+<p>The rest of the time, there's a <a href="log/log0.html">log</a> [<a href="log/rss.xml">rss</a>].</p>
 <hr/>
-<p>updated 240215 – williamthazard at pm.me</p>
+<p>updated 240717 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
