--- a/sketches/index.html
+++ b/sketches/index.html
@@ -60,10 +60,10 @@
     }
     p.center {
       text-align: center;
-      }
+    }
     p.right {
       text-align: right;
-      }
+    }
   </style>
 </head>
 <body>
@@ -76,7 +76,7 @@
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p>updated 240705 – williamthazard at pm.me</p>
+<p>updated 240705 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
