--- a/scripts/index.html
+++ b/scripts/index.html
@@ -75,11 +75,15 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><br/><p><a href=../../log/log0.html>240614-afterword</a></p>
-<p><img src="pics/whtotfia.jpeg" alt="afterword" title="afterword" /></p>
-<p>Theatre of the Flat Imagination: afterword will occur at eight o'clock pm, central daylight time, on June 28th, 2024 and will feature performances by Zander Raymond &amp; me. If you'd like to attend this event, please get in touch with me by email, and I'll send you the address.</p>
+<br/><p>the following shell scripts are used to build this website</p>
+<ul>
+<li><a href="build.sh">build.sh</a></li>
+<li><a href="htmlify.sh">htmlify.sh</a></li>
+<li><a href="vidflip.sh">vidflip.sh</a></li>
+<li><a href="build-rss.sh">build-rss.sh</a></li>
+</ul>
 <hr/>
-<p>williamthazard [at] pm.me</p>
+<p>updated 240801 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
