--- a/scripts/index.html
+++ b/scripts/index.html
@@ -75,12 +75,13 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p>the following shell scripts are used to build this website</p>
+<br/><p>the following shell scripts are used to build <a href="../index.html">this website</a></p>
 <ul>
 <li><a href="build.sh">build.sh</a></li>
 <li><a href="htmlify.sh">htmlify.sh</a></li>
 <li><a href="vidflip.sh">vidflip.sh</a></li>
 <li><a href="build-rss.sh">build-rss.sh</a></li>
+<li><a href="../update.sh">update.sh</a></li>
 </ul>
 <hr/>
 <p>updated 240801 – williamthazard [at] pm.me</p>
