--- a/scripts/index.html
+++ b/scripts/index.html
@@ -14,13 +14,14 @@
 <br/><p>the following shell scripts are used to build <a href="../index.html">this website</a></p>
 <ul>
 <li><a href="build.sh">build.sh</a></li>
-<li><a href="htmlify.sh">htmlify.sh</a></li>
 <li><a href="vidflip.sh">vidflip.sh</a></li>
+<li><a href="imgflip.sh">imgflip.sh</a></li>
+<li><a href="htmlify.sh">htmlify.sh</a></li>
 <li><a href="build-rss.sh">build-rss.sh</a></li>
 <li><a href="../update.sh">update.sh</a></li>
 </ul>
 <hr/>
-<p>updated 240801 – williamthazard [at] pm.me</p>
+<p>updated 240806 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
