--- a/code/index.html
+++ b/code/index.html
@@ -13,6 +13,8 @@
 <br/>
 <br/><p><a href="../index.html"><img src="code.jpeg" alt="" /></a></p>
 <h1>code</h1>
+<p><a href="https://github.com/williamthazard/naherinlied">näherinlied</a> – lied script for <a href="https://github.com/ryleelyman/seamstress">seamstress</a>. Turns text into music  – <a href="https://www.youtube.com/watch?v=WkPvt-k2Teg">(demo)</a></p>
+<p><a href="https://github.com/williamthazard/carters-delay-norns">nornsCarter</a> – <a href="https://github.com/williamthazard/carters_delay">Carter's Delay</a> for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/norns/">norns</a></p>
 <p><a href="https://github.com/williamthazard/fiw-240705">Flat Imagination Workshop Script 240705</a>: p5.js poem/instrument created for the first installment of the Flat Imagination Workshop in Philadelphia, PA</p>
 <p><a href="https://github.com/williamthazard/aan">A/An</a>: an instrument built for <a href="https://mandygutmanngonzalez.com/">Mandy Gutmann-Gonzalez</a>, for performances of work from their chapbook <em><a href="https://endlinepress.com/A-An-by-Mandy-Gutmann-Gonzalez-a-chapbook">A/An</a></em></p>
 <p><a href="https://github.com/williamthazard/seamstressCarter">seamstressCarter</a>: <a href="https://github.com/williamthazard/carters_delay">Carter's Delay</a> for <a href="https://github.com/ryleelyman/seamstress">seamstress</a></p>
@@ -39,7 +41,7 @@
 <p><a href="https://github.com/williamthazard/jf-strum-sequencer">strum sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a>, based on <a href="https://nnnnnnnn.co/">Tehn's</a> code from <a href="https://www.youtube.com/watch?v=TkH8jxItXbw&amp;list=PLDeicGW8SQOwVdHDQkhUoDkCS67VDRVAd&amp;index=17&amp;t=1214s">Flash Crash 210710</a> – <a href="https://youtu.be/hIXeSZBBOPQ?si=cbG1I6O1LnrGSU7u">(demo)</a></p>
 <p><a href="https://github.com/williamthazard/alphabetsequencer">alphabet sequencer</a>: a sequencer for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a> &amp; <a href="https://monome.org/docs/crow/druid/">druid</a> – <a href="https://soundcloud.com/user-246275786/all-our-affairs">(demo)</a></p>
 <hr/>
-<p>updated 240730 – williamthazard [at] pm.me</p>
+<p>updated 240817 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
