--- a/scripts/index.html
+++ b/scripts/index.html
@@ -11,7 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p>the following shell scripts are used to build <a href="../index.html">this website</a></p>
+<br/><p>the following shell scripts are used to build <a href="../">this website</a></p>
 <ul>
 <li><a href="build.sh">build.sh</a></li>
 <li><a href="vidflip.sh">vidflip.sh</a></li>
@@ -21,7 +21,7 @@
 <li><a href="../update.sh">update.sh</a></li>
 </ul>
 <hr/>
-<p>updated 240806 – williamthazard [at] pm.me</p>
+<p>updated 240828 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
