--- a/sketches/index.html
+++ b/sketches/index.html
@@ -11,14 +11,14 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="../index.html"><img src="sketches.jpeg" alt="" /></a></p>
+<br/><p><a href="../"><img src="sketches.jpeg" alt="" /></a></p>
 <h1><p class='center'>sketches</p></h1>
 <p><a href="candle-cradle/index.html">candle-cradle</a></p>
 <p><a href="240604/index.html">240604</a></p>
 <p><a href="liquid-text/index.html">liquid text</a></p>
 <p><a href="test/index.html">test</a></p>
 <hr/>
-<p>updated 240730 – williamthazard [at] pm.me</p>
+<p>updated 240828 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
