--- a/videos/index.html
+++ b/videos/index.html
@@ -11,7 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="../index.html"><img src="videos.jpeg" alt="" /></a></p>
+<br/><p><a href="../"><img src="videos.jpeg" alt="" /></a></p>
 <h1>videos</h1>
 <p><a href="https://youtu.be/nDCAaxCHuxo?si=eluSKnsg_RpdZjcH">Theatre of the Flat Imagination, volume two: Jack the Modernist</a>: live performance of &quot;carve&quot; with parens chat (<a href="https://ryleealanza.org/">Alanza</a> &amp; <a href="https://dndrks.com/">Dan Derks</a>). This piece is dedicated to <a href="https://www.instagram.com/jaseknighter">Jonathan Snyder</a>, with thanks to <a href="https://soundcloud.com/carraldo">Alex Dickey</a> and <a href="https://www.duncangeere.com/">Duncan Geere</a>.</p>
 <p><a href="https://youtu.be/prJhTocp-qc?si=dJdhCblkr6UUjIHo">superLied on two round robins</a></p>
@@ -31,7 +31,7 @@
 <p><a href="https://youtu.be/vuEUNN_ldO4?si=iv9JC7RV_cozjNMl">First Crow First</a>: demonstration of the <a href="https://monome.org/docs/crow/first/">first</a> script for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/crow/">crow</a>, using a minimal eurorack modular setup</p>
 <p><a href="https://vimeo.com/506638600">The Pageant</a>: guy meets girl. Directed by Kasey O'Brien. Starring Billy Berger-Bailey and Hannah Adrian. Best LGBTQ, Toronto Intl Women Film Festival. Best LGBTQ, Montreal Independent Film Festival. Best Performance in a Drama, Reel Love Festival. Best Duo Silver Award at Best Actor Awards NY</p>
 <hr/>
-<p>updated 240730 – williamthazard [at] pm.me</p>
+<p>updated 240828 – williamthazard [at] pm.me</p>
 </div>
 </body>
 </html><!doctype html>
