--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
 <br/>
 <br/><p><a href="../"><img src="code.jpeg" alt="" /></a></p>
 <h1>code</h1>
-<h3><em>note: if you derive value or pleasure from these tools, please consider <a href="https://github.com/sponsors/williamthazard">sponsoring my work</a> with a monthly contribution – your support allows me to keep working on these projects and keeps my work free and open for anyone to use</em></h3>
+<h3><em>if you derive value or pleasure from these tools, please consider <a href="https://github.com/sponsors/williamthazard">sponsoring my work</a> with a monthly contribution – your support allows me to keep working on these projects and keeps my work free and open for anyone to use</em></h3>
 <p><a href="https://github.com/williamthazard/naherinlied">näherinlied</a> – lied script for <a href="https://github.com/ryleelyman/seamstress">seamstress</a>. Turns text into music  – <a href="https://www.youtube.com/watch?v=WkPvt-k2Teg">(demo)</a></p>
 <p><a href="https://github.com/williamthazard/carters-delay-norns">nornsCarter</a> – <a href="https://github.com/williamthazard/carters_delay">Carter's Delay</a> for <a href="https://monome.org/">monome</a> <a href="https://monome.org/docs/norns/">norns</a></p>
 <p><a href="https://github.com/williamthazard/fiw-240705">Flat Imagination Workshop Script 240705</a>: p5.js poem/instrument created for the first installment of the Flat Imagination Workshop in Philadelphia, PA</p>
