--- a/gifs/index.html
+++ b/gifs/index.html
@@ -11,7 +11,8 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><img src="../log/pics/MEDIA.gif" alt="MEDIA" title="MEDIA" /></p>
+<br/><p><img src="../log/pics/MEDIA.gif" alt="MEDIA" title="MEDIA" />
+![like a hawk waits](../log/pics/like a hawk waits.gif 'like a hawk waits')</p>
 <hr/>
 <p>updated 241101 – williamthazard [at] pm.me</p>
 </div>
