--- a/gifs/index.html
+++ b/gifs/index.html
@@ -17,7 +17,8 @@
 <p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
 <p><img src="../log/pics/NO-CHOICE.gif" alt="NO CHOICE" title="NO CHOICE" /></p>
 <p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
-<p><img src="../log/pics/UTTER-%5B2%5D.gif" alt="UTTER" title="UTTER" /></p>
+<p><img src="../log/pics/UTTER-%5B2%5D.gif" alt="UTTER" title="UTTER" />
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
 <hr/>
 <p>updated 241101 – williamthazard [at] pm.me</p>
 </div>
