--- a/gifs/index.html
+++ b/gifs/index.html
@@ -21,7 +21,7 @@
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
 <hr/>
 <p>updated 241101 – williamthazard [at] pm.me</p>
-<p class='right'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
+<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
 </html><!doctype html>
