--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ These poems involve <a href="words">words</a>.</p>
 <a href="https://www.eventbrite.com/e/-mix-lit-presents-a-flat-imagination-workshop-goodbye-mind-dani-derks-tickets-1116860623189?aff=oddtdtcreator">//////// buy tickets for the next flat imagination workshop here ////////</a></p>
 <hr/>
 <p>updated 241218 – williamthazard [at] pm.me</p>
-<p class='right'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
+<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
 </html><!doctype html>
