--- a/sketches/index.html
+++ b/sketches/index.html
@@ -20,7 +20,7 @@
 <p><a href="test/index.html">test</a></p>
 <hr/>
 <p>updated 250105 – williamthazard [at] pm.me</p>
-<p class='right'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
+<p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
 </html><!doctype html>
