--- a/gifs/index.html
+++ b/gifs/index.html
@@ -20,7 +20,7 @@
 <p><img src="../log/pics/UTTER-%5B2%5D.gif" alt="UTTER" title="UTTER" />
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
 <hr/>
-<p>updated 241101 – williamthazard [at] pm.me</p>
+<p class='center'>updated 241101 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
