--- a/scripts/index.html
+++ b/scripts/index.html
@@ -23,7 +23,7 @@
 <li><a href="../update.sh">update.sh</a></li>
 </ul>
 <hr/>
-<p>updated 241101 – williamthazard [at] pm.me</p>
+<p class='center'>updated 241101 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
