--- a/sounds/index.html
+++ b/sounds/index.html
@@ -24,7 +24,7 @@
 <p><a href="https://soundcloud.com/william-hazard-331424393">Theatre of the Flat Imagination</a>: occasional recordings from the <a href="https://llllllll.co/t/william-hazards-theatre-of-the-flat-imagination/65108?u=williamhazard">performance series</a></p>
 <p><a href="https://soundcloud.com/user-246275786">SoundCloud</a>: sketches, demos, &amp; studies</p>
 <hr/>
-<p>updated 250103 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250103 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
