--- a/words/index.html
+++ b/words/index.html
@@ -19,7 +19,7 @@
 <p><a href="https://gifrenga.co">The Living Debt</a>: an <a href="https://github.com/williamthazard/gifrenga">open-source</a> GIF renga in collaboration with Robert David Carey</p>
 <p><a href="https://ghostproposal.com/">Ghost Proposal</a>: <a href="https://ghostproposal.com/William-Hazard">The Power of Then</a> – a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle</p>
 <hr/>
-<p>updated 250103 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250103 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
