--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>William Hazard</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="me" href="https://c.im/@williamthazard">
+  <link rel="me" href="https://post.lurk.org/@williamhazard">
   <meta name="keywords" content="poetry, hazard">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
