--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ These poems involve <a href="words">words</a>.</p>
 <p>They also involve <a href="sounds">sounds</a>.</p>
 <p>These are interwoven with <a href="code">code</a>.</p>
 <p>Sometimes, they're captured in <a href="videos">videos</a>.</p>
-<p>Sometimes, they're shared in <a href="performances">performances</a>.</p>
+<p>Sometimes, they're shared at <a href="events">events</a>.</p>
 <p>The rest of the time, there's a <a href="log">log</a> [<a href="log/rss.xml">rss</a>].</p>
 <hr/>
-<p class='center'>updated 250121 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250210 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a></p>
 </div>
 </body>
