--- a/sketches/index.html
+++ b/sketches/index.html
@@ -15,7 +15,7 @@
 <h1><p class='center'>sketches</p></h1>
 <p><a href="teapot/index.html">teapot</a></p>
 <p><a href="boom-red/index.html">boom-red</a></p>
-<p><a href="curses-krypton/index.html">curses-krypton</a></p>
+<p><a href="curse-krypton/index.html">curse-krypton</a></p>
 <p><a href="candle-cradle/index.html">candle-cradle</a></p>
 <p><a href="240604/index.html">240604</a></p>
 <p><a href="liquid-text/index.html">liquid text</a></p>
