--- a/sketches/curse-krypton/index.html
+++ b/sketches/curse-krypton/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"><head><script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script><meta charset="utf-8" /></head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" /></head>
   <body><script>let lines = [{text: ["hi"], align: [0,50]},{text: ["ho"], align: [345,50]},
       {text: ["hum"], align: [0,400]},{text: ["him"], align: [345,400]},
       {text: ["hm"], align: [200,200]},{text: ["hee"], align: [0,50]},
