--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@ These poems involve <a href="words">words</a>.</p>
 <p>These are interwoven with <a href="code">code</a>.</p>
 <p>Sometimes, they're captured in <a href="videos">videos</a>.</p>
 <p>Sometimes, they're shared at <a href="events">events</a>.</p>
-<p>The rest of the time, there's a <a href="log">log</a> [<a href="log/rss.xml">rss</a>].
-<br><br><br><br>
-<a href="https://us06web.zoom.us/meeting/register/okYyxkWBQoao6txf_nNHGg#/registration">register for my upcoming online code sonnets workshop here</a></p>
+<p>The rest of the time, there's a <a href="log">log</a> [<a href="log/rss.xml">rss</a>].</p>
 <hr/>
-<p class='center'>updated 250313 – williamthazard [at] pm.me</p>
+<p class='center'>updated 250330 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
