--- a/gbg/4/index.html
+++ b/gbg/4/index.html
@@ -11,7 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="1">THE</a> <a href="2">GLASS</a> <a href="3">BEAD</a> <a href="4">GAME</a></p>
+<br/><p><a href="../1">one</a> <a href="../2">two</a> <a href="../3">three</a> four</p>
 </div>
 </body>
 </html><!doctype html>
