--- a/gbg/index.html
+++ b/gbg/index.html
@@ -11,7 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="1">THE</a> <a href="2">GLASS</a> <a href="3">BEAD</a> <a href="4">GAME</a></p>
+<br/><p class='center'><h1>[THE](1) [GLASS](2) [BEAD](3) [GAME](4)</h1></p>
 </div>
 </body>
 </html><!doctype html>
