--- a/gbg/index.html
+++ b/gbg/index.html
@@ -11,9 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p class='center'>
-[THE](1) [GLASS](2) [BEAD](3) [GAME](4)
-</p>
+<br/><p><a href="1">THE</a> <a href="2">GLASS</a> <a href="3">BEAD</a> <a href="4">GAME</a></p>
 </div>
 </body>
 </html><!doctype html>
