--- a/gbg/1/marker.html
+++ b/gbg/1/marker.html
@@ -11,9 +11,6 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><audio controls autoplay src="../../log/audio/zander.wav" loop="true"></audio>
-<br>
-<a href="../1">a</a> <a href="../3">blank</a> <a href="../4">delta</a></p>
-</div>
+<br/></div>
 </body>
 </html><!doctype html>
