--- a/gbg/4/index.html
+++ b/gbg/4/index.html
@@ -11,7 +11,10 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="../1">one</a> <a href="../2">two</a> <a href="../3">three</a> four</p>
+<br/><video width="320" height="240" controls>
+  <source src="frogs.mp4" type="video/mp4">
+</video>
+<a href="../1">one</a> <a href="../2">two</a> <a href="../3">three</a> four
 </div>
 </body>
 </html><!doctype html>
