--- a/gbg/4/index.html
+++ b/gbg/4/index.html
@@ -11,10 +11,15 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><video width="320" height="240" controls>
+<br/><p class='center'>
+<video width="320" height="240" autoplay loop playsinline controls>
   <source src="frogs.mp4" type="video/mp4">
 </video>
+<br />
+<h1>
 <a href="../1">one</a> <a href="../2">two</a> <a href="../3">three</a> four
+</h1>
+</p>
 </div>
 </body>
 </html><!doctype html>
