--- a/gbg/4/index.html
+++ b/gbg/4/index.html
@@ -17,8 +17,9 @@
 </video>
 <br />
 <h1>
+</p>
+<p class='center'>
 <a href="../1">one</a> <a href="../2">two</a> <a href="../3">three</a> four
-</h1>
 </p>
 </div>
 </body>
