--- a/gbg/4/index.html
+++ b/gbg/4/index.html
@@ -11,7 +11,8 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p class='center'>
+<br/><p><br /><br /><br /><br /></p>
+<p class='center'>
 <video width="320" height="240" autoplay loop playsinline controls>
   <source src="frogs.mp4" type="video/mp4">
 </video>
