--- a/gbg/4/index.html
+++ b/gbg/4/index.html
@@ -13,8 +13,11 @@
 <br/>
 <br/><p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
 <p class='center'>
-<video width="320" height="240" autoplay loop playsinline controls>
-  <source src="frogs.mp4" type="video/mp4">
+<video width="800" poster="frogs.jpeg" autoplay loop playsinline controls>
+    <source src="frogs.mp4" type="video/mp4">
+    <source src="frgos.mov" type="video/mov">
+    <source src="frogs.webm" type="video/webm">
+    <source src="frogs.ogg" type="video/ogg">
 </video>
 <br />
 <h1>
