--- a/gbg/archaic/index.html
+++ b/gbg/archaic/index.html
@@ -11,19 +11,21 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p>We cannot know his legendary <a href="../1">head</a>
-with eyes like ripening fruit. And yet his torso
-is still suffused with brilliance from inside,
-like a lamp, in which his gaze, now turned to low,</p>
-<p>gleams in all its power. Otherwise
-the curved breast could not <a href="../3">dazzle</a> you so, nor could
-a smile run through the placid hips and thighs
-to that dark center where procreation flared.</p>
-<p>Otherwise this stone would seem defaced
-beneath the translucent cascade of the shoulders
-and would not <a href="../4">glisten</a> like a wild beast’s fur:</p>
-<p>would not, from all the borders of itself,
-burst like a star: for here there is no place
+<br/><h1>ARCHAIC TORSO OF APOLLO</h1>
+<h4>Rainer Maria Rilke</h4>
+<p>We cannot know his legendary <a href="../1">head</a> <br />
+with eyes like ripening fruit. And yet his torso <br />
+is still suffused with brilliance from inside, <br />
+like a lamp, in which his gaze, now turned to low, <br /></p>
+<p>gleams in all its power. Otherwise <br />
+the curved breast could not <a href="../3">dazzle</a> you so, nor could <br />
+a smile run through the placid hips and thighs <br />
+to that dark center where procreation flared. <br /></p>
+<p>Otherwise this stone would seem defaced <br />
+beneath the translucent cascade of the shoulders <br />
+and would not <a href="../4">glisten</a> like a wild beast’s fur: <br /></p>
+<p>would not, from all the borders of itself, <br />
+burst like a star: for here there is no place <br />
 that does not see you. You must change your <a href="../2">life</a>.</p>
 </div>
 </body>
