--- a/gbg/index.html
+++ b/gbg/index.html
@@ -11,7 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><a href="1">THE</a> <a href="2">GLASS</a> <a href="archaic">BEAD</a> <a href="4">GAME</a></p>
+<br/><p><a href="1">THE</a> <a href="2">GLASS</a> <a href="archaic">BEAD</a> <a href="dash">GAME</a></p>
 </div>
 </body>
 </html><!doctype html>
