--- a/gbg/eggs/index.html
+++ b/gbg/eggs/index.html
@@ -12,20 +12,8 @@
     <div style="margin:20px">
 <br/>
 <br/><p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-<p class='center'>
-<video width="1024" poster="frogs.jpeg" autoplay loop playsinline controls>
-    <source src="frogs.mp4" type="video/mp4">
-    <source src="frogs.mov" type="video/mov">
-    <source src="frogs.webm" type="video/webm">
-    <source src="frogs.ogg" type="video/ogg">
-</video>
-<br />
-</p>
-<p class='center'>
-<h1>
-<a href="../1">these</a> <a href="../2">are</a> <a href="../3">the</a> frogs
-</h1>
-</p>
+<p><audio controls src="audio/zander.wav" autoplay loop></audio></p>
+<p><a href="../1">the</a> <a href="../2">eggs</a> <a href="../dash">of</a> <a href="../archaic">time</a></p>
 </div>
 </body>
 </html><!doctype html>
