--- a/gbg/eggs/index.html
+++ b/gbg/eggs/index.html
@@ -12,8 +12,10 @@
     <div style="margin:20px">
 <br/>
 <br/><p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-<p><audio controls src="audio/zander.wav" autoplay loop></audio></p>
-<p><a href="../1">the</a> <a href="../2">eggs</a> <a href="../dash">of</a> <a href="../archaic">time</a></p>
+<p class="center">
+<audio controls src="audio/zander.wav" autoplay loop></audio><br />
+<a href="../1">the</a> <a href="../2">eggs</a> <a href="../dash">of</a> <a href="../3">time</a>
+</p>
 </div>
 </body>
 </html><!doctype html>
