--- a/gbg/eggs/index.html
+++ b/gbg/eggs/index.html
@@ -13,7 +13,7 @@
 <br/>
 <br/><p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
 <p class="center">
-<audio controls src="audio/zander.wav" autoplay loop></audio><br />
+<audio controls src="../../log/audio/zander.wav" autoplay loop></audio><br />
 <a href="../1">the</a> <a href="../2">eggs</a> <a href="../dash">of</a> <a href="../3">time</a>
 </p>
 </div>
