--- a/gbg/eggs/index.html
+++ b/gbg/eggs/index.html
@@ -14,8 +14,12 @@
 <br/><p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
 <p class="center">
 <audio controls src="../../log/audio/zander.wav" autoplay loop></audio><br />
+</p>
+<h1>
+<p class="center">
 <a href="../1">the</a> <a href="../2">eggs</a> <a href="../dash">of</a> <a href="../3">time</a>
 </p>
+</h1>
 </div>
 </body>
 </html><!doctype html>
